--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -34,11 +34,12 @@
       text-decoration: none;
       color: $text-secondary-color;
       font-size: 0.875rem;
+      letter-spacing: .0178571em;
       line-height: 1.25rem;
       font-weight: 500;
 
       &__text {
-        padding: 23.5px 16px;
+        padding: 23.5px 17px;
       }
 
       &__pressed {
@@ -77,7 +78,7 @@
   left: 25%;
   width: 33px;
   display: block;
-  border: 2px solid $current-link-color;
+  border-top: 3px solid $current-link-color;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
