--- a/src/style/header.scss
+++ b/src/style/header.scss
@@ -8,7 +8,7 @@
   height: 64px;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: #fefefe;
 
   &-nav {
@@ -72,6 +72,10 @@
       margin: 0 8px;
     }
   }
+}
+
+.scroll {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 
 // Зеленая полосочка
