--- a/src/style/apptitle.scss
+++ b/src/style/apptitle.scss
@@ -118,7 +118,7 @@
     flex-direction: column;
 }
 
-.app-title__instal-btn{
+.app-title__install-btn{
     -moz-text-size-adjust: 100%;
     text-size-adjust: 100%;
     fill: #202124;
@@ -219,9 +219,43 @@
   stop-color: #01875f;
   color: #01875f;
 }
-  
-  @media screen and (max-width: 800px) {
-    .main {
-      margin: 39px 28px;
-    }
+
+@keyframes ldio-yzaezf3dcmj {
+  0% { transform: translate(-50%,-50%) rotate(0deg); }
+  100% { transform: translate(-50%,-50%) rotate(360deg); }
+}
+.ldio-yzaezf3dcmj div {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-top-color: transparent;
+  border-radius: 50%;
+}
+.ldio-yzaezf3dcmj div {
+  animation: ldio-yzaezf3dcmj 1s linear infinite;
+  top: 100px;
+  left: 100px
+}
+.loadingio-spinner-rolling-2by998twmg8 {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+.ldio-yzaezf3dcmj {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-yzaezf3dcmj div { box-sizing: content-box; }
+
+
+@media screen and (max-width: 800px) {
+  .main {
+    margin: 39px 28px;
   }
+}
