--- a/src/style/rating.scss
+++ b/src/style/rating.scss
@@ -43,6 +43,13 @@
         text-align: center;
       }
 
+      &__reviews {
+        font-family: Roboto;
+        font-size: 12px;
+        color: $text-secondary-color;
+        margin-top: 8px;
+      }
+
       &-stars {
         display: flex;
 
