--- a/src/style/menu.scss
+++ b/src/style/menu.scss
@@ -15,6 +15,7 @@
     justify-content: space-evenly;
 
     &-item {
+      cursor: pointer;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -23,7 +24,6 @@
         height: 24px;
         width: 24px;
       }
-
 
       &__name {
         font-family: Google Sans, Roboto, sans-serif;
@@ -34,7 +34,7 @@
         color: $text-secondary-color;
 
         &-colored {
-            color: $current-link-color;
+          color: $current-link-color;
         }
       }
     }
