--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -4,3 +4,7 @@
 @import "apptitle";
 @import "imageslider";
 @import "about";
+@import "rating";
+@import "reviews";
+@import "footer";
+@import "menu";
