--- a/src/style/apptitle.scss
+++ b/src/style/apptitle.scss
@@ -55,7 +55,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: center; /* Добавлено */
   }
 
 .app-title__additional-top_heading{
@@ -84,6 +84,7 @@
   font-family: Roboto, Arial, sans-serif;
   font-size: 0.75rem;
   font-weight: 400;
+  /* height: 20px; /* Удалено */
   justify-content: center;
   letter-spacing: 0.025em;
   line-height: 1rem;
@@ -98,6 +99,7 @@
 
 .app-title__additional-rated-image{
   background-size: contain;
+  // height: 16px;
 }
 
 .app-title__additional-container::before {
@@ -117,7 +119,7 @@
     flex-direction: column;
 }
 
-.app-title__install-btn{
+.app-title__instal-btn{
     -moz-text-size-adjust: 100%;
     text-size-adjust: 100%;
     fill: #202124;
@@ -161,6 +163,7 @@
   text-size-adjust: 100%;
     fill: #202124;
     align-items: center;
+    -webkit-appearance: none;
     background: #0000;
     border: none;
     border-radius: 4px;
@@ -218,9 +221,43 @@
   stop-color: #01875f;
   color: #01875f;
 }
-  
-  @media screen and (max-width: 800px) {
-    .main {
-      margin: 39px 28px;
-    }
+
+@keyframes ldio-yzaezf3dcmj {
+  0% { transform: translate(-50%,-50%) rotate(0deg); }
+  100% { transform: translate(-50%,-50%) rotate(360deg); }
+}
+.ldio-yzaezf3dcmj div {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border: 2px solid #ffffff;
+  border-top-color: transparent;
+  border-radius: 50%;
+}
+.ldio-yzaezf3dcmj div {
+  animation: ldio-yzaezf3dcmj 1s linear infinite;
+  top: 100px;
+  left: 100px
+}
+.loadingio-spinner-rolling-2by998twmg8 {
+  width: 200px;
+  height: 200px;
+  display: inline-block;
+  overflow: hidden;
+}
+.ldio-yzaezf3dcmj {
+  width: 100%;
+  height: 100%;
+  position: relative;
+  transform: translateZ(0) scale(1);
+  backface-visibility: hidden;
+  transform-origin: 0 0; /* see note above */
+}
+.ldio-yzaezf3dcmj div { box-sizing: content-box; }
+
+
+@media screen and (max-width: 800px) {
+  .main {
+    margin: 39px 28px;
   }
+}
